fix the text-align: center in the table

--- a/AssetsNet/src/app/components/stocks-table/stocks-table.component.scss
+++ b/AssetsNet/src/app/components/stocks-table/stocks-table.component.scss
@@ -48,6 +48,8 @@ th {
 	color: red;
 }
 
-th {
-	text-align: center;
-  }
+@media (max-width: 768px){
+	th {
+		text-align: center;
+ 	}
+}
